@@ -44,3 +44,6 @@ dependencies {
     integrationTestImplementation project(':libs:rest:ssl-cert-read')
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED'
+}
